01.실습/Chapter07.MSA와 DevOps 그리고 Kubernetes/04.컨테이너 운영 무작정 따라하기/Kubernetes-basic/container-orchestration/yaml_aws/ingress/path-based-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /blue
        backend:
          serviceName: nginx-blue-svc
          servicePort: 80
      - path: /green
        backend:
          serviceName: nginx-green-svc
          servicePort: 80
